image.html title fixed

--- a/lab-1/image.html
+++ b/lab-1/image.html
@@ -3,7 +3,7 @@
 
  <head>
   <meta charset="utf-8">
-  <title>HTML BASICS</title>
+  <title>Labwork #1</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
  </head>
 
