table height removed

--- a/lab-1/image.html
+++ b/lab-1/image.html
@@ -8,8 +8,7 @@
  </head>
 
  <body>
- <table height="100%">
- 	 
+ <table> 	 
  	<tr>
  		<td colspan="3" class="header">
  			<h1>Bis vincit qui se vincit in victoria</h1>
