removed extra spaces

--- a/lab-1/ul.html
+++ b/lab-1/ul.html
@@ -26,13 +26,14 @@
 	 	<td class="content-cell rating" width="25%">
      		<h2>World Champions of XXI Century</h2>
      		<ul>
-	       <li>Vladimir Kramnik</li>
-	       <li>Viswanathan Anand</li>
-	       <li>Magnus Carlsen</li>
-	       <li>Boris Gelfand</li>
-	       <li>Garry Kasparov</li>
-	       <li>Vasselin Topalov</li>
-	     </ul></td>
+		       <li>Vladimir Kramnik</li>
+		       <li>Viswanathan Anand</li>
+		       <li>Magnus Carlsen</li>
+		       <li>Boris Gelfand</li>
+		       <li>Garry Kasparov</li>
+		       <li>Vasselin Topalov</li>
+		    </ul>
+	 	</td>
 	 	
 	 	<td class="content-cell"  rowspan="2" width="50%">
  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -41,7 +42,8 @@
  			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
  			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
  			proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
- 			<p>Opus haud erat nimis arduum, quod plerumque e pactis locationum exscribendis, cogendis locariis, e locandis sortibus, et e componendis levioribus contentionibus, et iurgiis cum inquilinis consistebat—in quibus omnibus plena nobis decernendi facultas concessa erat. Subinde tamen necesse erat clientem nostrum, siquod negotium consueto gravius tractandum erat, vel ad subsignanda interdum documenta, adire et consulere, atque occasionibus istiusmodi, collocutionibus, quae negotia acta sequi solebant, nunquam non delectari consuevi; nam Vantine sermone delectabilis erat, cognitionem hominum mundique multis peregrinationibus doctus, habituque ingenii lepidi ac perspicacis, prorsusque sui, ornatus erat.</p></td>
+ 			<p>Opus haud erat nimis arduum, quod plerumque e pactis locationum exscribendis, cogendis locariis, e locandis sortibus, et e componendis levioribus contentionibus, et iurgiis cum inquilinis consistebat—in quibus omnibus plena nobis decernendi facultas concessa erat. Subinde tamen necesse erat clientem nostrum, siquod negotium consueto gravius tractandum erat, vel ad subsignanda interdum documenta, adire et consulere, atque occasionibus istiusmodi, collocutionibus, quae negotia acta sequi solebant, nunquam non delectari consuevi; nam Vantine sermone delectabilis erat, cognitionem hominum mundique multis peregrinationibus doctus, habituque ingenii lepidi ac perspicacis, prorsusque sui, ornatus erat.</p>
+ 		</td>
  		
  		<td class="content-cell" rowspan="3" width="25%">
  			<ul class="quotes-list">
@@ -57,10 +59,11 @@
  		</td></tr>
  	
  	<tr>
-			<td colspan="2" class="footer">
-				<h1>Cogito ergo sum</h1>
-				<p>Aequam memento rebus in arduis servare mentem</p>
-			</td></tr>
+		<td colspan="2" class="footer">
+			<h1>Cogito ergo sum</h1>
+			<p>Aequam memento rebus in arduis servare mentem</p>
+		</td>
+	</tr>
  
  </table>
  </body>
