--- a/lab-1/image.html
+++ b/lab-1/image.html
@@ -19,11 +19,14 @@
  			<a href="ul.html">Champions</a>
  			<a href="map.html">Map</a>
  			</nav>
- 		</td></tr>
+ 		</td>
+ 	</tr>
 
  	<tr>
  		<td class="content-cell" width="25%">
-     		<img src="img/board-puzzles.png" width="170" height="170"></td>
+     		<img src="img/board-puzzles.png" width="170" height="170">
+     	</td>
+ 		
  		<td class="content-cell"  rowspan="2" width="50%">
  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -31,7 +34,9 @@
  			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
  			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
  			proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
- 			<p>Opus haud erat nimis arduum, quod plerumque e pactis locationum exscribendis, cogendis locariis, e locandis sortibus, et e componendis levioribus contentionibus, et iurgiis cum inquilinis consistebat—in quibus omnibus plena nobis decernendi facultas concessa erat. Subinde tamen necesse erat clientem nostrum, siquod negotium consueto gravius tractandum erat, vel ad subsignanda interdum documenta, adire et consulere, atque occasionibus istiusmodi, collocutionibus, quae negotia acta sequi solebant, nunquam non delectari consuevi; nam Vantine sermone delectabilis erat, cognitionem hominum mundique multis peregrinationibus doctus, habituque ingenii lepidi ac perspicacis, prorsusque sui, ornatus erat.</p></td>
+ 			<p>Opus haud erat nimis arduum, quod plerumque e pactis locationum exscribendis, cogendis locariis, e locandis sortibus, et e componendis levioribus contentionibus, et iurgiis cum inquilinis consistebat—in quibus omnibus plena nobis decernendi facultas concessa erat. Subinde tamen necesse erat clientem nostrum, siquod negotium consueto gravius tractandum erat, vel ad subsignanda interdum documenta, adire et consulere, atque occasionibus istiusmodi, collocutionibus, quae negotia acta sequi solebant, nunquam non delectari consuevi; nam Vantine sermone delectabilis erat, cognitionem hominum mundique multis peregrinationibus doctus, habituque ingenii lepidi ac perspicacis, prorsusque sui, ornatus erat.
+ 			</p>
+ 		</td>
 
 	 	<td class="content-cell quotes" rowspan="3" width="25%">
 	 		<ul>
@@ -39,19 +44,23 @@
 				<li>“The game of chess is not merely an idle amusement. Several very valuable qualities of the mind, useful in the course of human life, are to be acquired or strengthened by it… Life is a kind of Chess, in which we have often points to gain, and competitors or adversaries to contend with.” – Benjamin Franklin</li>
 				<li>“Chess doesn’t drive people mad, it keeps mad people sane.” – Bill Hartston</li>
 				<li>“In life, as in chess, one’s own pawns block one’s way.  A man’s very wealthy, ease, leisure, children, books, which should help him to win, more often checkmate him.” – Charles Buxton</li>
-	 		</ul></td></tr>
+	 		</ul>
+	 	</td>
+	 </tr>
  	
  	<tr>
  		<td class="content-cell" width="25%">
  			<p>Mei ea agam dolor, vel sanctus liberavisse ea. Dico ferri duo an, eam homero facilis tractatos ne. Ignota tritani quo cu, ut pro animal partiendo efficiendi. Falli elitr mucius nam id, est sint iudicabit interesset te. Cu graeci commodo argumentum eum, et pri semper saperet.</p>
  		</td>
- 		</tr>
+ 	</tr>
+ 	
  	<tr>
-			<td colspan="2" class="footer">
-				<h1>Cogito ergo sum</h1>
+		<td colspan="2" class="footer">
+			<h1>Cogito ergo sum</h1>
 				<p>Aequam memento rebus in arduis servare mentem</p>
 			</td>
-			</tr>
+		</tr>
+
  </table>
  </body>
 </html>
