--- a/lab-1/index.html
+++ b/lab-1/index.html
@@ -9,7 +9,6 @@
 
  <body>
  <table>
- 	
  	<tr>
  		<td colspan="3" class="header">
  			<h1>Bis vincit qui se vincit in victoria</h1>
@@ -24,8 +23,9 @@
  	</tr>
  	<tr>
 	 	<td class="content-cell" width="25%">
- 		<p>Mei ea agam dolor, vel sanctus liberavisse ea. Dico ferri duo an, eam homero facilis tractatos ne. Ignota tritani quo cu, ut pro animal partiendo efficiendi. Falli elitr mucius nam id, est sint iudicabit interesset te. Cu graeci commodo argumentum eum, et pri semper saperet.</p>
- 		</td>
+	 		<p>Mei ea agam dolor, vel sanctus liberavisse ea. Dico ferri duo an, eam homero facilis tractatos ne. Ignota tritani quo cu, ut pro animal partiendo efficiendi. Falli elitr mucius nam id, est sint iudicabit interesset te. Cu graeci commodo argumentum eum, et pri semper saperet.
+	 		</p>
+	 	</td>
  		<td class="content-cell"  rowspan="2" width="50%">
  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -35,21 +35,23 @@
  			proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
  			<p>Opus haud erat nimis arduum, quod plerumque e pactis locationum exscribendis, cogendis locariis, e locandis sortibus, et e componendis levioribus contentionibus, et iurgiis cum inquilinis consistebat—in quibus omnibus plena nobis decernendi facultas concessa erat. Subinde tamen necesse erat clientem nostrum, siquod negotium consueto gravius tractandum erat, vel ad subsignanda interdum documenta, adire et consulere, atque occasionibus istiusmodi, collocutionibus, quae negotia acta sequi solebant, nunquam non delectari consuevi; nam Vantine sermone delectabilis erat, cognitionem hominum mundique multis peregrinationibus doctus, habituque ingenii lepidi ac perspicacis, prorsusque sui, ornatus erat.</p>
  		</td>
+ 		
  		<td class="content-cell" rowspan="3" width="25%">
- 		<ul class="quotes-list">
- 			<li>“I am convinced, the way one plays chess always reflects the player’s personality. If something defines his character, then it will also define his way of playing.” – Vladimir Kramnik</li>
-			<li>“The game of chess is not merely an idle amusement. Several very valuable qualities of the mind, useful in the course of human life, are to be acquired or strengthened by it… Life is a kind of Chess, in which we have often points to gain, and competitors or adversaries to contend with.” – Benjamin Franklin</li>
-			<li>“Chess doesn’t drive people mad, it keeps mad people sane.” – Bill Hartston</li>
-			<li>“In life, as in chess, one’s own pawns block one’s way.  A man’s very wealthy, ease, leisure, children, books, which should help him to win, more often checkmate him.” – Charles Buxton</li>
-			
-		</ul>
+	 		<ul class="quotes-list">
+	 			<li>“I am convinced, the way one plays chess always reflects the player’s personality. If something defines his character, then it will also define his way of playing.” – Vladimir Kramnik</li>
+				<li>“The game of chess is not merely an idle amusement. Several very valuable qualities of the mind, useful in the course of human life, are to be acquired or strengthened by it… Life is a kind of Chess, in which we have often points to gain, and competitors or adversaries to contend with.” – Benjamin Franklin</li>
+				<li>“Chess doesn’t drive people mad, it keeps mad people sane.” – Bill Hartston</li>
+				<li>“In life, as in chess, one’s own pawns block one’s way.  A man’s very wealthy, ease, leisure, children, books, which should help him to win, more often checkmate him.” – Charles Buxton</li>	
+			</ul>
     	</td>
- 	</tr>
+    </tr>
+
  	<tr>
  		<td class="content-cell" width="25%">
  			<p>Sed melius omnesque ei. Vel et congue docendi. Latine regione vis ex. Id everti consequuntur quo, ad has modo definitiones, causae nonumes sadipscing vel an. Eu vim volumus mediocrem, sea dicit quodsi tractatos ea</p>
  		</td>
  	</tr>
+
  	<tr>
 			<td colspan="2" class="footer">
 				<h1>Cogito ergo sum</h1>
