lab-2 link added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<ul>
-        <li><a href="./lab-1/index.html">Laboratory work 1</a></li>
-    </ul>
+        	<li><a href="./lab-1/index.html">Labwork 1</a></li>
+		<li><a href="./lab-2/index.html">Labwork 2</a></li>
+    	</ul>
 </body>
 </html>
