--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Блочная вёрстка</title>
+<meta charset="utf-8">
+<title>HTML5 Web Page Layout</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-<div id="container">
-	<div id="header">
-	<h2>header (шапка сайта)</h2>
-	</div>
-		 
-	<div id="navigation">
-	<h2>Блок навигации</h2>
-	</div>
-		 
-	<div id="sidebar">
-	<h2>Левая панель</h2>
-	</div>
-		 
-	<div id="content">
-	<h2>Основной контент страницы</h2>
-	</div>
-		 
-	<div id="clear">
-		 
-	</div>
-							   
-	<div id="footer">
-	<h2>footer (низ сайта)</h2>
-	</div>
-</div>
+    <header>Labwork #1</header>
+    <div id="container">
+        <div id="header">
+        	<h1>Labwork #2</h1>
+        </div>
+         <div id="block2">
+        	<p>llol</p>
+        </div>
+         <div id="block3">
+        	<p>llol</p>
+        </div>
+         <div id="block5">
+        	<p>llol</p>
+        </div>
+         <div id="block4">
+        	<p>llol</p>
+        </div>
+    </div>
+    
+    	<footer>
+    		<p>copyroght &copy; tutorialrepublic.com</p>
+    	</footer>
 </body>
 </html>
