--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -10,12 +10,13 @@
 
 <body>
     <div id="header">
-        <p>Marharian Tadzhat</p>
          <nav>
                 <a href="index.html">Main</a>
                 <a href="flex.html">Flex</a>
                 <a href="grid.html">Grid</a>
         </nav>
+        <h1>Bis vincit qui se vincit in victoria</h1>
+        
     </div>
     <div id="content">    
             <div id="left-sidebar">
