--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -30,24 +30,29 @@
             </div>    
 
                 <div id="data-cell2">
-                    <p>Lorem2 ipsum dolor sit amet consectetur adipisicing elit. Rem enim hic vel, nulla eveniet odio
-                        dignissimos qui. Nemo neque quidem nesciunt libero cupiditate commodi accusamus exercitationem
-                        asperiores vitae quasi recusandae velit accusantium minima, eligendi assumenda totam! Officiis, veniam
-                        voluptates. Voluptatum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+                    <p>Opus haud erat nimis arduum, quod plerumque e pactis locationum exscribendis, cogendis locariis, e locandis sortibus, et e componendis levioribus contentionibus, et iurgiis cum inquilinis consistebat—in quibus omnibus plena nobis decernendi facultas concessa erat. Subinde tamen necesse erat clientem nostrum, siquod negotium consueto gravius tractandum erat, vel ad subsignanda interdum documenta, adire et consulere, atque occasionibus istiusmodi, collocutionibus, quae negotia acta sequi solebant, nunquam non delectari consuevi; nam Vantine sermone delectabilis erat, cognitionem hominum mundique multis peregrinationibus doctus, habituque ingenii lepidi ac perspicacis, prorsusque sui, ornatus erat.
+                        </p>
                 </div>                    
 
                 <div id="right-sidebar">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <ul class="quotes-list">
+                        <li>“I am convinced, the way one plays chess always reflects the player’s personality. If something defines his character, then it will also define his way of playing.” – Vladimir Kramnik</li>
+                        <li>“The game of chess is not merely an idle amusement. Several very valuable qualities of the mind, useful in the course of human life, are to be acquired or strengthened by it… Life is a kind of Chess, in which we have often points to gain, and competitors or adversaries to contend with.” – Benjamin Franklin</li>
+                        <li>“Chess doesn’t drive people mad, it keeps mad people sane.” – Bill Hartston</li>
+                        <li>“In life, as in chess, one’s own pawns block one’s way.  A man’s very wealthy, ease, leisure, children, books, which should help him to win, more often checkmate him.” – Charles Buxton</li>   
+                    </ul>
                 </div>
         
                 <div id="footer">
-                    <p>Lorem7 ipsum dolor sit amet.</p>
-                    <h1><span class="color-text">KPI FICT</span></h1>
+                    <h1>Cogito ergo sum</h1>
+                    <p>Aequam memento rebus in arduis servare mentem</p>
                 </div>
     </div>
 </body>
