--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	<ul>
-        	<li><a href="./lab-1/index.html">Labwork 1</a></li>
+        <li><a href="./lab-1/index.html">Labwork 1</a></li>
 		<li><a href="./lab-2/index.html">Labwork 2</a></li>
+        <li><a href="./lab-3/grid.html">Labwork 3</a></li>
     	</ul>
 </body>
 </html>
