--- a/lab-3/grid.html
+++ b/lab-3/grid.html
@@ -39,7 +39,7 @@
                 <button type="submit">Sumbit</button>
             </form>  
         </div>
-        <button class="form-input btn-reset" style="display: flex;">Default</button>
+        <button class="form-input btn-reset" style="display: flex;">Reset</button>
  
     </div>
   <div class="grid-item box-2" id="block3">
@@ -65,7 +65,7 @@
                 <button type="submit">Sumbit</button>
             </form>
         </div>
-        <button class="form-input btn-reset" style="display: flex; margin-left: 46%;">Default</button>
+        <button class="form-input btn-reset" style="display: flex; margin-left: 46%;">Reset</button>
     </div>
 
   <div class="grid-item box-1" id="block2">
@@ -86,7 +86,7 @@
                 <button type="submit">Sumbit</button>
             </form>
         </div>
-        <button class="form-input btn-reset" style="display: flex;">Default</button>
+        <button class="form-input btn-reset" style="display: flex;">Reset</button>
   </div>
   
   <div class="grid-item box-3" id="block5">
@@ -104,7 +104,7 @@
                 <button type="submit">Sumbit</button>
             </form>
         </div>
-       <button class="form-input btn-reset" style="display: flex;">Default</button>
+       <button class="form-input btn-reset" style="display: flex;">Reset</button>
     </div>
   <div class="footer" id="block6">
             <h1>Cogito ergo sum</h1>
