lab-4 link added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
 	<ul>
         <li><a href="./lab-1/index.html">Labwork 1</a></li>
-		<li><a href="./lab-2/index.html">Labwork 2</a></li>
+	<li><a href="./lab-2/index.html">Labwork 2</a></li>
         <li><a href="./lab-3/grid.html">Labwork 3</a></li>
+        <li><a href="./lab-4/grid.html">Labwork 4</a></li>
     	</ul>
 </body>
 </html>
