--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<li><a href="./lab-2/index.html">Labwork 2</a></li>
         <li><a href="./lab-3/grid.html">Labwork 3</a></li>
         <li><a href="./lab-4/grid.html">Labwork 4</a></li>
-    	</ul>
+    	<li><a href="./lab-5/grid.html">Labwork 5</a></li>
+	</ul>
 </body>
 </html>
