--- a/task/index.html
+++ b/task/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,10 +10,10 @@
     <div class="container">
         <p id="text">abc123 abc  ;3 dascd98 adc123 abc2 tljkjd ABC pRedt abc09 avvtreeop 24piuPIUPIU42u2pj ABC98 abc847</p>
         <form id="userForm">    
-        <input type="text" id="user-substr" placeholder="symbols">
-        <input type="button" id="filter-button" value="Filter">
-        <input type="text" id="user-text"  placeholder="text">
-        <input type="button" id="add-text-button" value="Add">
+            <input type="text" id="user-substr" placeholder="symbols">
+            <input type="button" id="filter-button" value="Filter">
+            <input type="text" id="user-text" placeholder="text">
+            <input type="button" id="add-text-button" value="Add">
         </form>
     </div>
     <script src="js/main.js"></script>
