--- a/task/index.html
+++ b/task/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="container">
-        <p id="text">abc123 abc  ;3 dascd98 adc123 abc2 tljkjd ABC pRedt abc09 avvtreeop 24piuPIUPIU42u2pj ABC98 abc847</p>
+        <p id="text">vdiv1cdiv1 vvvabc1998 div93</p>
         <form id="userForm">    
             <input type="text" id="user-substr" placeholder="symbols">
             <input type="button" id="filter-button" value="Filter">
