fixed index bug

--- a/task/index.html
+++ b/task/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="container">
-        <p id="text">vdiv1cdiv1 vvvabc1998 div93</p>
+        <p id="text">divdiv1divdiv1 vvvabc1998 div93</p>
         <form id="userForm">    
             <input type="text" id="user-substr" placeholder="symbols">
             <input type="button" id="filter-button" value="Filter">
